# azcluster

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  REFACTOR-SUMMARY.md  deploy.sh  healthchecks.md  walkthrough-dgxc.md  walkthrough.md
.github/workflows/: ci.yml  release.yml
.opencode/skills/azcluster/: SKILL.md
bicep/: aks-cluster.bicep  aks-main.bicep  cluster.bicep  main.bicep  main.json
bicep/modules/: accounting.bicep  aks-prometheus.bicep  aks.bicep  amlfs.bicep  anf.bicep  bastion.bicep  compute.bicep  grafana-dashboards.bicep  ingestion-endpoint.bicep  keyvault.bicep  login.bicep  monitoring.bicep  network.bicep  scheduler.bicep  storage.bicep
cloud-init/: compute.yaml.tmpl  login.yaml.tmpl  scheduler.yaml.tmpl
crates/azcluster-cli/: Cargo.toml  build.rs
crates/azcluster-cli/src/: cluster_resolver.rs  cluster_state.rs  crypto.rs  deploy_progress.rs  main.rs  timings.rs  user.rs
crates/azcluster-cli/src/aks/: azcp.rs  blobcache.rs  deploy.rs  feature.rs  mod.rs  operate.rs  operators.rs  status.rs  train.rs  validate.rs
crates/azcluster-cli/src/aks/k8s/: client.rs  debug.rs  exec.rs  logs.rs  mod.rs  portforward.rs
crates/azcluster-cli/src/aks/manifests/: azcp-upload-job.yaml  blobcache-probe.yaml  dcgm-servicemonitor.yaml  gpu-operator-values.yaml  kueue-queues.yaml  kueue-values.yaml  local-csi-storageclass.yaml  megatron-pretrain.py  nccl-validate-mpijob.yaml  network-operator-values.yaml  nfd-network-rule.yaml  nic-cluster-policy.yaml  training-pytorchjob.yaml
crates/azcluster-cli/src/arm/: client.rs  config.rs  lro.rs  mod.rs
crates/azcluster-cli/src/auth/: cache.rs  device_code.rs  interactive.rs  mod.rs  token_provider.rs
crates/azcluster-cli/src/bastion/: client.rs  mod.rs  tunnel.rs
crates/azcluster-cli/src/keyvault/: client.rs  mod.rs
crates/azcluster-core/: Cargo.toml
crates/azcluster-core/src/: lib.rs
crates/azcluster-server/: Cargo.toml
crates/azcluster-server/src/: main.rs
crates/azhealthcheck/: Cargo.toml
crates/azhealthcheck/src/: checks.rs  main.rs  metrics.rs  types.rs
doc/: full-walkthrough-aks-plan.md  full-walkthrough-aks-v0.25.0.md  full-walkthrough-plan.md  full-walkthrough-slurm-plan.md  full-walkthrough-slurm-v0.24.12.md  full-walkthrough-slurm-v0.24.20.md  full-walkthrough-slurm-v0.25.0.md  full-walkthrough-v0.24.12.md  full-walkthrough-v0.24.20.md  full-workflow-plan.md  healthchecks.md  walkthrough-plan.md
examples/: README.md
examples/aks/: README.md  azcp-upload.yaml  blobcache-rdma.yaml  inference-sglang-multinode.yaml  inference-vllm.yaml  nccl-allreduce-mpijob.yaml  stage-model.yaml  training-blobcache.yaml  training-megatron-pytorchjob.yaml  training-operator.yaml
examples/slurm/: README.md  distribute-azcp-cluster.sbatch  inference-sglang.sbatch  inference-vllm.sbatch  nccl-allreduce-vm.sbatch  nccl-allreduce.sbatch  stage-model.sbatch  training-megatron.sbatch
grafana/dashboards/: gpu_ib.json  health.json  node.json  slurm.json
