[workspace]
resolver = "2"
members = [
    "crates/azcluster-core",
    "crates/azcluster-server",
    "crates/azcluster-cli",
    "crates/azhealthcheck",
]

[workspace.package]
version = "0.22.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
authors = ["edwardsp"]
repository = "https://github.com/edwardsp/azcluster"
homepage = "https://github.com/edwardsp/azcluster"

[workspace.dependencies]
azcluster-core = { path = "crates/azcluster-core" }

anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "io-util", "io-std", "net", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
webbrowser = "1"
tokio-tungstenite = "0.21"
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "0.26"
toml = "0.8"
base64 = "0.22"
sha2 = "0.10"
url = "2"
rand = "0.8"
blake3 = "1"
ssh-key = { version = "0.6", features = ["ed25519", "alloc"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
