[package]
name = "azcluster-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "azcluster"
path = "src/main.rs"

[dependencies]
azcluster-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
directories = "5"
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
webbrowser = { workspace = true }
dirs = "5"
base64 = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
ssh-key = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
tracing = { workspace = true }
